tests/spec/compile-pass/081_task_group_try_join_all.zn
// category: compile-pass
// profile: hosted
// purpose: TaskGroup starts multiple futures and settles them through tryJoinAll

module tests.pass.taskGroupTryJoinAll;

async fn loadAll(move runtime: Runtime, move jobs: Vector<Job>) -> Result<Vector<Page>, FetchError> {
    var group = TaskGroup<Result<Page, FetchError>>.withCapacity(jobs.len(), mut runtime);

    for move job in jobs {
        try mut group.spawn({
            return fetch(move job);
        });
    }

    return try await move group.tryJoinAll();
}
