tests/spec/compile-fail/155_task_group_must_settle.zn
// category: compile-fail
// profile: hosted
// purpose: TaskGroup must be joined, cancelled, or fully drained before leaving scope

module tests.fail.taskGroupMustSettle;

async fn bad(move runtime: Runtime, move job: Job) -> Result<Unit, FetchError> {
    var group = TaskGroup<Result<Page, FetchError>>.withCapacity(1, mut runtime);
    try mut group.spawn({
        return fetch(move job);
    });

    return Ok(()); // expected-error: task group must be settled with joinAll, tryJoinAll, cancelRemaining, or drained to None
}
